--- a/CourseWork/App.xaml
+++ b/CourseWork/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Resources/MenuButton.xaml"/>
                 <ResourceDictionary Source="Resources/ListViewItemTemplate.xaml"/>
                 <ResourceDictionary Source="Resources/RoundedTextBox.xaml"/>
+                <ResourceDictionary Source="Resources/language.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
