--- a/CourseWork/Views/HomeView.xaml
+++ b/CourseWork/Views/HomeView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:CourseWork.Views" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="#a05344">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="46*"/>
@@ -52,13 +52,15 @@
             <TextBox BorderThickness="1" Text="{Binding textForSearch}" VerticalContentAlignment="Center" Height="25" Width=" 400" VerticalAlignment="Center" Template="{StaticResource TextBoxBaseControlTemplate}" >
                 
             </TextBox>
-                    <Button Width="125" Height="25" Command="{Binding FindByName}"/>
-            </StackPanel>
+                    <Button Width="75" Height="25" Command="{Binding FindByName}" Style="{StaticResource RoundedButtonStyle}">
+                        <materialDesign:PackIcon Kind="Search" Foreground="White"/>
+                    </Button>
+                </StackPanel>
             </materialDesign:Card>
         </Grid>
         <Grid Grid.Row="3">
             <materialDesign:Card Margin="10,10,10,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
-                <ListBox ItemsSource="{Binding Parts}" SelectedItem="{Binding SelectedPart}" x:Name="partList" MouseDoubleClick="partList_MouseDoubleClick" Height="224.4" SelectionMode="Extended">
+                <ListBox ItemsSource="{Binding Parts}" SelectedItem="{Binding SelectedPart}" x:Name="partList" MouseDoubleClick="partList_MouseDoubleClick" Height="244.4" SelectionMode="Extended">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Border CornerRadius="6" BorderThickness="1" DockPanel.Dock="Top" BorderBrush="Transparent">
