--- a/CourseWork/Views/ProfileView.xaml
+++ b/CourseWork/Views/ProfileView.xaml
@@ -6,7 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:CourseWork.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="450" d:DesignWidth="800" Background="White" FontFamily="Helvetica">
     <Grid Background="#a05344">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -18,24 +18,74 @@
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0" Grid.RowSpan="2" Margin="0,0,0,-0.4">
             <materialDesign:Card Margin="10,10,10,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
-
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="38*"/>
+                        <RowDefinition Height="177*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <materialDesign:PackIcon Kind="FaceManProfile" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                 Height="60" Width="60"/>
+                    </Grid>
+                    <Grid Grid.Row="1">
+                        <TextBlock Text="Информация и пользователе" HorizontalAlignment="Center" FontSize="18"/>
+                        <StackPanel Orientation="Vertical">
+                            <StackPanel Orientation="Horizontal" Margin="10,50,0,0">
+                                <TextBlock Text="Псевдоним пользователя: "/>
+                                <TextBlock Text="{Binding User.Login}"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="10,10,0,0">
+                                <TextBlock Text="Имя пользователя: "/>
+                                <TextBlock Text="{Binding User.FirstName}"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="10,10,0,0">
+                                <TextBlock Text="Фамилия пользователя: "/>
+                                <TextBlock Text="{Binding User.LastName}"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="10,10,0,0">
+                                <TextBlock Text="Адрес электронной почты: "/>
+                                <TextBlock Text="{Binding User.Email}"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="120,160,0,0">
+                                <Button Content="Сменить пароль?"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
+                </Grid>
             </materialDesign:Card>
         </Grid>
         <Grid Grid.Column="1" Grid.Row="0">
             <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth4" Margin="10,10,10,10" UniformCornerRadius="5">
                 <Grid Background="#321f28">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="273*"/>
-                        <ColumnDefinition Width="80*"/>
-                        <ColumnDefinition Width="27*"/>
+                        <ColumnDefinition Width="118*"/>
+                        <ColumnDefinition Width="97*"/>
+                        <ColumnDefinition Width="95*"/>
+                        <ColumnDefinition Width="70*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="131*"/>
+                        <RowDefinition Height="33*"/>
+                        <RowDefinition Height="40*"/>
+                        <RowDefinition Height="58*"/>
                         <RowDefinition Height="38*"/>
                         <RowDefinition Height="36*"/>
                     </Grid.RowDefinitions>
-                    <Grid Grid.Row="1" Grid.Column="1">
+                    <Grid Grid.Row="3" Grid.Column="3">
                         <Image Source="E:\2nd course\OOP\CW\CourseWork\CourseWork\Resources\Images\visa1.png"></Image>
+                    </Grid>
+                    <Grid Grid.Row="0" Grid.Column="3">
+                        <Button Style="{StaticResource RoundedButtonStyle}">
+                            <materialDesign:PackIcon Kind="Add" Width="10" Height="10"/>
+                        </Button>
+                    </Grid>
+                    <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+                        <TextBlock Text="Balance:" Margin="0,0,60,0" Foreground="White" FontSize="26" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Grid>
+                    <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2">
+                        <TextBlock Text="{Binding Balance}" Margin="100,0,0,0" Foreground="White" FontSize="20" VerticalAlignment="Center"/>
+                    </Grid>
+                    <Grid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
+                        <TextBlock Text="{Binding FullName}" Foreground="White" Margin="20,0,0,0"/>
                     </Grid>
                 </Grid>
             </materialDesign:Card>
@@ -57,14 +107,14 @@
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button Tag="{Binding}" Command="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=DataContext.CancelOrder}">
-                                        <materialDesign:PackIcon Kind="Cross"/>
+                                        <materialDesign:PackIcon Kind="Cancel"/>
                                     </Button>
                                 </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>    
+                            </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
                 </DataGrid>
-                
+
             </materialDesign:Card>
         </Grid>
     </Grid>
