--- a/CourseWork/Views/SearchView.xaml
+++ b/CourseWork/Views/SearchView.xaml
@@ -19,21 +19,73 @@
         <Grid Grid.Row="0" Grid.ColumnSpan="2">
             <materialDesign:Card Margin="10,10,10,0" UniformCornerRadius="5" materialDesign:ShadowAssist.ShadowDepth="Depth4">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <TextBox Text="{Binding textForSearch}" Width="250" VerticalAlignment="Center" BorderThickness="1" BorderBrush="Black" Template="{StaticResource TextBoxBaseControlTemplate}"/>
-                    <Button Command="{Binding FindByName}"/>
+                    <TextBox Text="{Binding textForSearch}" Width="250" Height="25" VerticalAlignment="Center" BorderThickness="1" BorderBrush="Black" Template="{StaticResource TextBoxBaseControlTemplate}"/>
+                    <Button Command="{Binding FindByName}" Margin="10,0,0,0">
+                        <materialDesign:PackIcon Kind="Search" Height="20" Width="20"/>
+                    </Button>
                 </StackPanel>
             </materialDesign:Card>
         </Grid>
         <Grid Grid.Column="1" Grid.Row="1">
-            <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth4" Margin="0,10,10,10" UniformCornerRadius="5">
+            <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth4" Margin="0,10,9.6,10" UniformCornerRadius="5" Grid.RowSpan="3">
                 <Grid>
-                    
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="4*"/>
+                        <RowDefinition Height="4*"/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="4*"/>
+                        <RowDefinition Height="2*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <TextBlock Text="Подробный поиск" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Helvetica" FontSize="14"/>
+                    </Grid>
+                    <Grid Grid.Row="1">
+                        <StackPanel Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
+                            <TextBlock Margin="10,0,0,0" Text="От:" VerticalAlignment="Center" FontFamily="Helvetica"/>
+                            <TextBox Text="{Binding LowValue}" VerticalAlignment="Center" Margin="10,0,0,0" Width="80" BorderBrush="Black" BorderThickness="1"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Vertical" >
+                            <Slider  Foreground="#a05344" Width="150" HorizontalAlignment="Left" Value="{Binding LowValue}" Maximum="9999" Minimum="0"/>
+                        </StackPanel>
+                        </StackPanel>
+                    </Grid>
+                    <Grid Grid.Row="2">
+                        <StackPanel Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
+                            <TextBlock Margin="10,0,0,0" Text="До:" VerticalAlignment="Center" FontFamily="Helvetica"/>
+                            <TextBox Text="{Binding MaxValue}" VerticalAlignment="Center" Margin="10,0,0,0" Width="80" BorderBrush="Black" BorderThickness="1"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Vertical">
+                            <Slider Foreground="#a05344" Width="150" HorizontalAlignment="Left" Value="{Binding MaxValue}" Minimum="{Binding LowValue}" Maximum="9999"/>
+                        </StackPanel>
+                        </StackPanel>
+                    </Grid>
+                    <Grid Grid.Row="3">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
+                            <TextBlock Text="Категория: " FontFamily="Helvetica" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                            <ComboBox ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory}" MinWidth="100" materialDesign:HintAssist.Hint="Категория..." BorderThickness="2" BorderBrush="Black">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Name}" Margin="0" VerticalAlignment="Bottom"
+                                       HorizontalAlignment="Center"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                        </StackPanel>
+                    </Grid>
+                    <Grid Grid.Row="6">
+                        <Button Content="Подобрать" Command="{Binding DetailedSearch}"/>
+                    </Grid>
                 </Grid>
             </materialDesign:Card>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="0">
             <materialDesign:Card Margin="10,10,10,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
-                <ListBox ItemsSource="{Binding Parts}" x:Name="partList" Height="360">
+                <ListBox ItemsSource="{Binding Parts}" x:Name="partList" Height="360" MaxHeight="500">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Border CornerRadius="6" BorderThickness="1" DockPanel.Dock="Top" BorderBrush="Transparent">
